--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -7,6 +7,7 @@ $bp-landing-smallest: 37.5em; // 600px, 600/16 = 37.5em
 
 // IMPORTANT NOTE: MODIFY IN :root BELOW TOO
 $bp-largest: 81.25em; //1300px, 1300/16 = 81.25em
+$bp-larger: 60.875em; //974px, 974/16 = 60.875em
 $bp-large: 45.125em; // 722px, 722/16 = 45.125em
 $bp-small: 30.9375em; // 495px, 495/16 = 30.9375em
 
