--- a/src/sass/components/_nav-vertical.scss
+++ b/src/sass/components/_nav-vertical.scss
@@ -219,8 +219,11 @@
     @media screen and (max-width: $bp-small) {
       margin: 0.1rem;
       margin-left: 0;
-      max-width: 2.5rem;
+      max-width: 3.5rem;
+
+      white-space: nowrap;
       overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
