--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -31,3 +31,4 @@
 @forward "global-user-msg-manager";
 @forward "current-subscription-presenter";
 @forward "subscription-presenter";
+@forward "chart-sets-and-weight";
