--- a/src/sass/components/_exercise-completer.scss
+++ b/src/sass/components/_exercise-completer.scss
@@ -110,6 +110,7 @@
     width: 100%;
     border-radius: 1rem;
     background-color: rgba($color-grey-light-2, 0.4);
+    font-size: 1.3rem;
 
     @media only screen and (max-width: $bp-large) {
       grid-row: chart-start / chart-end;
