--- a/src/sass/components/_niche-msg.scss
+++ b/src/sass/components/_niche-msg.scss
@@ -1,4 +1,5 @@
 @use "../abstracts" as *;
+@use "../base" as *;
 
 .niche-msg {
   display: flex;
@@ -125,10 +126,20 @@
     text-align: center;
     padding: 3rem 10%;
 
+    @media only screen and (max-width: $bp-landing-large) {
+      font-size: 1.4rem;
+      width: 70%;
+      padding: 2rem 2rem;
+    }
+
     &--left {
       left: 0;
       right: auto;
       transform: translate(-100%, -10%);
+
+      @media only screen and (max-width: $bp-landing-medium) {
+        left: 4rem;
+      }
     }
 
     &--right {
