--- a/src/sass/components/_niche-msg.scss
+++ b/src/sass/components/_niche-msg.scss
@@ -132,6 +132,10 @@
       padding: 2rem 2rem;
     }
 
+    @media only screen and (max-width: $bp-landing-hide-niche-explanation) {
+      display: none;
+    }
+
     &--left {
       left: 0;
       right: auto;
