--- a/src/sass/components/_flash-message.scss
+++ b/src/sass/components/_flash-message.scss
@@ -6,14 +6,14 @@
   grid-gap: 1.5rem;
 
   background-color: $color-grey-light-3;
-  border-radius: .5rem;
-  box-shadow: 0.2rem 1rem 2rem rgba($color-black, .1);
+  border-radius: 0.5rem;
+  box-shadow: 0.2rem 1rem 2rem rgba($color-black, 0.1);
 
   overflow: hidden;
 
   opacity: 1;
   visibility: visible;
-  transition: all .3s;
+  transition: all 0.3s;
 
   &--hidden {
     opacity: 0;
@@ -27,14 +27,26 @@
   &__line {
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(to right bottom, $color-grey-dark-3, $color-grey-dark-2);
+    background-image: linear-gradient(
+      to right bottom,
+      $color-grey-dark-3,
+      $color-grey-dark-2
+    );
 
     &--success {
-      background-image: linear-gradient(to right bottom, $color-primary-dark, $color-primary-light);
+      background-image: linear-gradient(
+        to right bottom,
+        $color-primary-dark,
+        $color-primary-light
+      );
     }
 
     &--error {
-      background-image: linear-gradient(to right bottom, $color-red-dark, $color-red-light);
+      background-image: linear-gradient(
+        to right bottom,
+        $color-red-dark,
+        $color-red-light
+      );
     }
   }
 
@@ -45,17 +57,17 @@
     align-items: center;
     padding: 1rem 0;
 
-    &>* {
+    & > * {
       height: 100%;
       width: 100%;
       color: $color-grey-dark-2;
     }
 
-    &--success>* {
+    &--success > * {
       color: $color-primary;
     }
 
-    &--error>* {
+    &--error > * {
       color: $color-red;
     }
   }
@@ -72,7 +84,7 @@
     font-size: 1.8rem;
     font-weight: 600;
     color: $color-grey-dark-5;
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
   }
 
   &__description {
@@ -96,10 +108,13 @@
     color: $color-grey-dark-2;
     cursor: pointer;
 
-    font-size: 1.3rem;
     text-transform: uppercase;
 
-    transition: all .3s;
+    transition: all 0.3s;
+    &,
+    & > * {
+      font-size: 2.3rem;
+    }
 
     &:hover {
       background-color: $color-grey-light-2;
@@ -109,5 +124,4 @@
       background-color: $color-grey-light-1;
     }
   }
-
 }
