--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -12,6 +12,7 @@
 @forward "testimonial";
 @forward "register-form";
 @forward "login-form";
+@forward "forgot-reset-pass-form";
 @forward "oauth-login";
 @forward "button-new";
 @forward "search-bar";
